--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Quicksand', sans-serif;
+  background-image: url("images/pidgeon-background.jpg");
 }
 h1{
   font-size: 2em;
