--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,20 @@
 body{
   font-family: 'Quicksand', sans-serif;
-
   background-image: url('../images/pidgeon-background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  font-size: 18px;
 }
 h1{
   font-size: 2em;
   color: #c12258;
-  line-height: 1.5em;
+  line-height: 1.5;
 }
 
 p{
   color: black;
   font-size: 18px;
   padding-top: 15px;
-
 }
 a{
   font-size: 18px;
@@ -24,6 +23,9 @@ a{
 }
 a:focus{
   border: 1px solid blue;
+}
+main{
+  margin-bottom: 120px;
 }
 footer{
   background: black;
@@ -40,7 +42,10 @@ footer p {
 
 /* ==========TABLE========== */
 table{
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 thead th{
   min-width: 150px;
@@ -49,40 +54,31 @@ thead th{
   text-align: center;
   text-transform: uppercase;
   background: #7e0830;
+  border-bottom: 2px solid black;
 }
-tbody td{
+tbody td, tbody th{
   text-align: center;
   padding: 15px;
   border-bottom: 2px solid black;
 }
-tbody th{
-    border-bottom: 2px solid black;
+tbody tr:last-child td, tbody tr:last-child th{
+  border-bottom: 0px;
 }
 tbody tr:nth-child(even) {
   background: #dddddd;
 }
-/* table{
-  border: 2px solid black;
-  border-radius: 10px;
-  border-spacing: 0;
-  border-collapse: collapse;
+tbody tr:hover{
+  background-color: #fab9cf;
 }
-th, td{
-  min-width: 150px;
-  padding: 10px 10px;
-  border-bottom: 2px solid black;
-  padding: 15px;
+thead th:first-child{
+  border-top-left-radius: 10px;
 }
-thead{
-  background-color: #7e0830;
-  color: white;
-  text-align: center;
-  text-transform: uppercase;
-}
-thead tr:first-child,
 thead th:last-child{
-  border-radius: 10px;
+  border-top-right-radius: 10px;
 }
-tbody tr:nth-child(even) {
-  background: #dddddd;
-} */
+tbody tr:last-child th{
+  border-bottom-left-radius: 10px;
+}
+tbody tr:last-child td:last-child{
+  border-bottom-right-radius: 10px;
+}
