--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Quicksand', sans-serif;
   background-image: url('../images/pidgeon-background.jpg');
+  background-color: #dddddd;
   background-size: cover;
   background-repeat: no-repeat;
   font-size: 18px;
